// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flyout component Renders flyout component 1`] = `
<div>
  <h2
    class="euiTitle euiTitle--xsmall"
    style="font-weight: 300; font-size: 21px;"
  >
    Query 
    1
  </h2>
  <div
    class="euiSpacer euiSpacer--m"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Index
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <select
                aria-label="Search Index"
                class="euiSelect euiSelect--compressed"
                id="random_html_id"
              >
                <option
                  disabled=""
                  hidden=""
                  style="display: none;"
                  value=""
                >
                   
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                      fill-rule="non-zero"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Pipeline-optional
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="euiComboBox euiComboBox--compressed"
            role="combobox"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <div
                  class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isClearable"
                  data-test-subj="comboBoxInput"
                  tabindex="-1"
                >
                  <div
                    class="euiComboBox__input"
                    style="font-size: 14px; display: inline-block;"
                  >
                    <input
                      aria-controls=""
                      data-test-subj="comboBoxSearchInput"
                      id="random_html_id"
                      role="textbox"
                      style="box-sizing: content-box; width: 2px;"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <button
                    aria-label="Open list of options"
                    class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                    data-test-subj="comboBoxToggleListButton"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                        fill-rule="non-zero"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Query
      </label>
       
      <div
        class="euiText euiText--extraSmall"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonEmpty__text"
            >
              Help
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiCodeEditorWrapper"
        data-test-subj="codeEditorContainer"
        style="width: 100%; height: 10rem;"
      >
        <button
          class="euiCodeEditorKeyboardHint"
          data-test-subj="codeEditorHint"
          id="random_html_id"
        >
          <p
            class="euiText"
          >
            Press Enter to start editing.
          </p>
          <p
            class="euiText"
          >
            When you're done, press Escape to stop editing.
          </p>
        </button>
        <div
          class=" ace_editor ace-tm"
          id="random_html_id"
          style="width: 100%; height: 10rem; font-size: 14px;"
        >
          <textarea
            aria-describedby="random_html_id-help-0"
            aria-label="Code Editor"
            autocapitalize="off"
            autocorrect="off"
            class="ace_text-input"
            spellcheck="false"
            style="opacity: 0;"
            tabindex="-1"
            wrap="off"
          />
          <div
            aria-hidden="true"
            class="ace_gutter"
          >
            <div
              class="ace_layer ace_gutter-layer ace_folding-enabled"
            />
            <div
              class="ace_gutter-active-line"
            />
          </div>
          <div
            class="ace_scroller"
          >
            <div
              class="ace_content"
            >
              <div
                class="ace_layer ace_print-margin-layer"
              >
                <div
                  class="ace_print-margin"
                  style="left: 4px; visibility: hidden;"
                />
              </div>
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_text-layer"
                style="padding: 0px 4px;"
              />
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_cursor-layer ace_hidden-cursors"
              >
                <div
                  class="ace_cursor"
                />
              </div>
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-v"
            style="display: none; width: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="width: 20px;"
            />
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-h"
            style="display: none; height: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="height: 20px;"
            />
          </div>
          <div
            style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
          >
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            />
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            >
              XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        <p>
          Enter a query in
           
          <a
            href="https://opensearch.org/docs/latest/query-dsl/index/"
          >
            OpenSearch Query DSL
          </a>
          . Use %SearchText% to refer to the text in the search bar
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Flyout component Renders flyout component when multi-datasource is enabled 1`] = `
<div>
  <h2
    class="euiTitle euiTitle--xsmall"
    style="font-weight: 300; font-size: 21px;"
  >
    Query 
    1
  </h2>
  <div
    class="euiSpacer euiSpacer--m"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Index
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <select
                aria-label="Search Index"
                class="euiSelect euiSelect--compressed"
                id="random_html_id"
              >
                <option
                  disabled=""
                  hidden=""
                  style="display: none;"
                  value=""
                >
                   
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <svg
                    aria-hidden="true"
                    class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                    focusable="false"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
        id="random_html_id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="random_html_id"
          >
            Pipeline-optional
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="euiComboBox euiComboBox--compressed"
            role="combobox"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <div
                  class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isClearable"
                  data-test-subj="comboBoxInput"
                  tabindex="-1"
                >
                  <div
                    class="euiComboBox__input"
                    style="font-size: 14px; display: inline-block;"
                  >
                    <input
                      aria-controls=""
                      data-test-subj="comboBoxSearchInput"
                      id="random_html_id"
                      role="textbox"
                      style="box-sizing: content-box; width: 2px;"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <button
                    aria-label="Open list of options"
                    class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                    data-test-subj="comboBoxToggleListButton"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Query
      </label>
       
      <div
        class="euiText euiText--extraSmall"
      >
        <button
          class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall"
          type="button"
        >
          <span
            class="euiButtonContent euiButtonEmpty__content"
          >
            <span
              class="euiButtonEmpty__text"
            >
              Help
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiCodeEditorWrapper"
        data-test-subj="codeEditorContainer"
        style="width: 100%; height: 10rem;"
      >
        <button
          class="euiCodeEditorKeyboardHint"
          data-test-subj="codeEditorHint"
          id="random_html_id"
        >
          <p
            class="euiText"
          >
            Press Enter to start editing.
          </p>
          <p
            class="euiText"
          >
            When you're done, press Escape to stop editing.
          </p>
        </button>
        <div
          class=" ace_editor ace-tm"
          id="random_html_id"
          style="width: 100%; height: 10rem; font-size: 14px;"
        >
          <textarea
            aria-describedby="random_html_id-help-0"
            aria-label="Code Editor"
            autocapitalize="off"
            autocorrect="off"
            class="ace_text-input"
            spellcheck="false"
            style="opacity: 0;"
            tabindex="-1"
            wrap="off"
          />
          <div
            aria-hidden="true"
            class="ace_gutter"
          >
            <div
              class="ace_layer ace_gutter-layer ace_folding-enabled"
            />
            <div
              class="ace_gutter-active-line"
            />
          </div>
          <div
            class="ace_scroller"
          >
            <div
              class="ace_content"
            >
              <div
                class="ace_layer ace_print-margin-layer"
              >
                <div
                  class="ace_print-margin"
                  style="left: 4px; visibility: hidden;"
                />
              </div>
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_text-layer"
                style="padding: 0px 4px;"
              />
              <div
                class="ace_layer ace_marker-layer"
              />
              <div
                class="ace_layer ace_cursor-layer ace_hidden-cursors"
              >
                <div
                  class="ace_cursor"
                />
              </div>
            </div>
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-v"
            style="display: none; width: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="width: 20px;"
            />
          </div>
          <div
            class="ace_scrollbar ace_scrollbar-h"
            style="display: none; height: 20px;"
          >
            <div
              class="ace_scrollbar-inner"
              style="height: 20px;"
            />
          </div>
          <div
            style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: hidden;"
          >
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            />
            <div
              style="height: auto; width: auto; top: 0px; left: 0px; visibility: hidden; position: absolute; white-space: pre; overflow: visible;"
            >
              XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiFormHelpText euiFormRow__text"
        id="random_html_id-help-0"
      >
        <p>
          Enter a query in
           
          <a
            href="https://opensearch.org/docs/latest/query-dsl/index/"
          >
            OpenSearch Query DSL
          </a>
          . Use %SearchText% to refer to the text in the search bar
        </p>
      </div>
    </div>
  </div>
</div>
`;
